недопилиный второй этап

--- a/source/accounts/templates/index.html
+++ b/source/accounts/templates/index.html
@@ -1,3 +1,4 @@
+
 {% extends 'base.html' %}
 {% load staticfiles %}
 {% load bootstrap4 %}
@@ -14,6 +15,19 @@
             {% else %}
                <p> <img src="{% static 'img/image-not-found.png.png' %}" width="50" height="50" alt="guest_img" >
             </p>
+
+                {% if user.is_authenticated %}
+                        <p>
+                            <span class="counter">{{ article.like_count }}</span>
+
+                                <a class="add" href="{% url 'accounts:add_friends' user.pk %}">Like</a>
+                                <a class="remove" href="#">Unlike</a>
+
+                        </p>
+                {% endif %}
+
+
+
         {% endif %}
 </div>
     {% endfor %}
@@ -21,6 +35,8 @@
 {% if is_paginated %}
     {% include 'partial/pagination.html' %}
 {% endif %}
+
+    <script type="application/javascript" src="{% static "friends.js" %}"></script>
 
 {% endblock %}
 
